<resources>
    <string name="app_name">KPOP MV Quiz  - Multiple Choice</string>
    <string name="start">START</string>
    <string name="Title" translatable="false">KPOP</string>
    <string name="bestscore">Best Score</string>
    <string name="Confirm">" Confirm "</string>
    <string name="Next">NEXT</string>
    <string name="Finish">FINISH</string>
    <string name="Setting">" SETTINGS "</string>
    <string name="Bgm">BGM</string>
    <string name="SFX">SFX</string>
    <string name="Cancel">CANCEL</string>
    <string name="Ok">OK</string>
    <string name="Quit">QUIT</string>
    <string name="Year">YEAR</string>
    <string name="All">ALL</string>
    <string name="Random">RANDOM</string>
    <string name="CLOSE">CLOSE</string>
    <string name="Donotshow"> DO NOT SHOW AGAIN </string>
    <string name="INTERNET">INTERNET</string>
    <string name="InternetWarning">There is no internet connection.\nPlease try again after connecting to the internet.</string>
    <string name="BackQuit">Press the back button once more to exit.</string>
    <string name="Tips1_1">Best\nScore\nin\nBasic Mode!</string>
    <string name="Tips1_2">Challenge\nScore\nin\nBasic Mode!</string>
    <string name="Tips1_3">Your\nCurrent\nHint Point!</string>
    <string name="Tips1_4">Click to\nsee\nthis\nagain!</string>
    <string name="Tips1_5">See AD.\nand Get\nthe Hint Point!</string>
    <string name="Tips1_6">Google\nLogin!</string>
    <string name="Tips2_1">Ranking System\nwhere you can\ncompete with others!</string>
    <string name="Tips2_2">Achieve\nvarious\nAchievements!</string>
    <string name="Tips3_1">Listen song,\nWrite right answer\nwithin 30 seconds!</string>
    <string name="Tips3_2">Repeat song\nSee MV\nInitial consonant\nThree types of hints\ncan be used\nas hint points!</string>
    <string name="Tips4_1">Do not include\nspaces and special characters!\nPlease write \nonly lowercase letters\nin English.</string>
    <string name="Tips4_3">You can\nmove on\nto the\nnext\nquiz!</string>
    <string name="Tips4_4">Please\nchange\nonly\n&amp; to and!</string>
    <string name="Tips5_1">In the challenge mode\nYou have to get\n100 questions right\nwithout getting them wrong!</string>
    <string name="Tips5_2">You can only use\nthe hint 5 times!</string>
    <string name="songexample">E.g) MORE &amp; MORE ->\nmoreandmore\nor 모어앤모어</string>
    <string name="nextlevelexample">E.g) Next Level -> nextlevel or 넥스트레벨</string>
    <string name="MvQuiz">MV QUIZ</string>
    <string name="VersionCancel">The update failed.</string>
    <string name="warning_smoothinternet">Please proceed in a\nsmooth Internet environment.</string>
    <string name="warning_wifi">We recommend playing in a\nWi-Fi environment.\nBe mindful of your mobile data usage.</string>
    <string name="warning_earphones">It is recommended to\n wear earphones or a headset.</string>
    <string name="lessPoint">Not enough points!</string>
    <string name="currentPoint">Current points :</string>
    <string name="lessCount">Can not use hint anymore.</string>
    <string name="tryAgain">Please try again in a few minutes.</string>
    <string name="congratulation">Congratulations! Got 50 points!!!</string>
    <string name="point_30">You have earned 30 points!!</string>
    <string name="seeAd">See Ad\nGet Points</string>
    <string name="fatalerror">A fatal error has occurred.</string>
    <string name="waitasecond">Please wait a moment.</string>
    <string name="scoreupdate">Score\nUpdate</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="ranking">Ranking</string>
    <string name="offline">Offline. Please log in!</string>
    <string name="loginsucceed">log-in succeed!</string>
    <string name="loginFail">Login failed!</string>
    <string name="updateSuccess">Score update success!</string>
    <string name="updateFail">Score update failed!</string>
    <string name="achievement">Achievement</string>
    <string name="beginnermodedescription">3 Levels, Free Hint\nMV and SONG</string>
    <string name="basicmodedescription">3 Levels, Free Hint\SONG only</string>
    <string name="challengemodedescription">100 Random Songs\n1 Chance</string>
    <string name="ChallengemodeName">100\nChallenges</string>
    <string name="mode">Mode</string>
    <string name="Easy">EASY</string>
    <string name="Normal">" NORMAL "</string>
    <string name="Hard">HARD</string>
    <string name="Easy2">TIME LIMIT 30s\nLISTENING 10s</string>
    <string name="Normal2">TIME LIMIT 30s\nLISTENING 5s</string>
    <string name="Hard2">TIME LIMIT 15s\nLISTENING 3s</string>
    <string name="Difficulty">DIFFICULTY</string>
    <string name="Gamestart">The Game will begin.\nGET READY!</string>
    <string name="consonantquiz">Consonant Quiz</string>
    <string name="consonant_description">Look at the consonants\nand guess the song title!</string>
    <string name="videointernet">There is no internet connection. Please restart the game after connecting to the internet.</string>
    <string name="multiplechoice">Multiple Choice</string>
    <string name="kpopgodmode">TIME LIMIT 15s\nLISTENING 1s</string>
    <string name="KPOP_BABY">KPOP BABY</string>
    <string name="KPOP_CLASSIC">CLASSIC</string>
    <string name="KPOP_MASTER">KPOP MASTER</string>
    <string name="KPOP_GOD">KPOP GOD</string>
    <string name="KPOP_CHALLENGE">100 CHALLENGE</string>
    <string name="chooseAnswer">Please choose the answer!</string>
    <string name="PLUS10">PLUS 10 POINTS</string>
    <string name="PLUS20">PLUS 20 POINTS</string>
    <string name="PLUS30">PLUS 30 POINTS</string>
    <string name="PLUS40">PLUS 40 POINTS</string>
    <string name="POINTREQUIRED10">10 POINTS REQUIRED</string>
    <string name="POINTREQUIRED30">30 POINTS REQUIRED</string>
    <string name="need10points">Need 10 points to enter!</string>
    <string name="need30points">Need 30 points to enter!</string>
    <string name="deducted10points">10 points have been deducted.</string>
    <string name="deducted30points">30 points have been deducted.</string>
    <string name="PLUS50">PLUS 50 POINTS</string>
    <string name="ADPOINT">GET POINTS</string>
    <string name="Removeoption">Removed One Option.</string>
    <string name="passquestion">Skip a question.</string>
    <string name="listenagain">Listen to the song again.</string>
    <string name="mverror">An error occurred while loading the music video. Please wait a moment.</string>
    <string name="singerExplain">Guess the songs\nof specific KPOP artists</string>
    <string name="singerMode">KPOP ARTIST MODE</string>
    <string name="KPOPMVQUIZ">KPOP MV QUIZ</string>
    <string name="KPOPMVQUIZ_text">KPOP MV QUIZ\nis a game\nto guess the questions\nby watching\nthe most popular music videos\nof the year.\n\nYou can get points to enter certain modes or use hints by tapping GET POINTS.\n\nLog in to the\nGoogle Play game service\nand compete\nwith people around the world!</string>
    <string name="KPOPARTISTMODE">KPOP ARTIST\nMODE</string>
    <string name="KPOPARTISTMODE_text">KPOP ARTIST MODE is a\nmini-game mode\nin which you listen to and guess songs from artists with many music videos on KPOP MV QUIZ.\n\nThis score does not count towards the rank score.</string>
    <string name="KPOPMODE">KPOP MV QUIZ\nMODE</string>
    <string name="KPOPMODE_text">There are many different modes to choose from.\n\nThe total score for each KPOP MV QUIZ MODE is reflected in the ranking score.\n\nPoints increase or decrease when completing or entering each mode.</string>
</resources>