<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/progress_wt">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/INTERNET"
        android:fontFamily="@font/font_basicbold"
        android:textSize="30dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/InternetWarning"
        android:fontFamily="@font/font_basic"
        android:textSize="24dp"
        android:padding="10dp"
        android:textColor="@color/gray"
        android:layout_marginBottom="10dp"/>


    <Button
        android:id="@+id/btn_Internetconfirm"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:background="@drawable/btn_remote"
        android:text="@string/Ok"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        android:soundEffectsEnabled="false"
        />



</LinearLayout>