<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/title_color">

    <com.tenriver.kpopmultiplechoice.OutlineTextView
        android:id="@+id/warning1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:fontFamily="@font/font_digital"
        android:gravity="center"
        android:text="@string/warning_smoothinternet"
        android:textColor="@color/title_text_color"
        android:textSize="28dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"

        app:textStroke="true"
        app:textStrokeColor="@color/white"
        app:textStrokeWidth="1.5" />

    <com.tenriver.kpopmultiplechoice.OutlineTextView
        android:id="@+id/warning2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:fontFamily="@font/font_digital"
        android:gravity="center"
        android:text="@string/warning_wifi"
        android:textColor="@color/title_text_color"
        android:textSize="28dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/warning1"
        app:layout_constraintVertical_bias="0.15"

        app:textStroke="true"
        app:textStrokeColor="@color/white"
        app:textStrokeWidth="1.5" />

    <com.tenriver.kpopmultiplechoice.OutlineTextView
        android:id="@+id/warning3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:fontFamily="@font/font_digital"
        android:gravity="center"
        android:text="@string/warning_earphones"
        android:textColor="@color/title_text_color"
        android:textSize="28dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/warning2"
        app:layout_constraintVertical_bias="0.2"

        app:textStroke="true"
        app:textStrokeColor="@color/white"
        app:textStrokeWidth="1.5" />

</androidx.constraintlayout.widget.ConstraintLayout>