<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- 게임스크린샷 이미지 -->
    <ImageView
        android:id="@+id/tips1_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/tips1image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHeight_percent="0.9"
        app:layout_constraintWidth_percent="0.9"
        />


    <com.tenriver.kpopmultiplechoice.OutlineTextView
        android:id="@+id/tips1_text1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="13sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/font_basic"
        android:gravity="center"
        android:text="@string/Tips1_1"
        android:textColor="@color/hard_color"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="0.183"

        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintWidth_percent="0.32"

        app:textStroke="true"
        app:textStrokeColor="@color/white"
        app:textStrokeWidth="16.0" />

    <com.tenriver.kpopmultiplechoice.OutlineTextView
        android:id="@+id/tips1_text2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="13sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/font_basic"

        android:gravity="center"
        android:text="@string/Tips1_2"
        android:textColor="@color/hard_color"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tips1_text1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintVertical_bias="0.2"

        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintWidth_percent="0.32"

        app:textStroke="true"
        app:textStrokeColor="@color/white"
        app:textStrokeWidth="16.0" />

    <com.tenriver.kpopmultiplechoice.OutlineTextView
        android:id="@+id/tips1_text3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="13sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/font_basic"

        android:gravity="center"
        android:text="@string/Tips1_3"
        android:textColor="@color/hard_color"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/tips1_image"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintVertical_bias="0.55"

        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintHeight_percent="0.1"

        app:textStroke="true"
        app:textStrokeColor="@color/white"
        app:textStrokeWidth="16.0" />

    <com.tenriver.kpopmultiplechoice.OutlineTextView
        android:id="@+id/tips1_text4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="13sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/font_basic"

        android:gravity="center"
        android:text="@string/Tips1_4"
        android:textColor="@color/hard_color"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/tips1_image"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.687"
        app:layout_constraintHorizontal_bias="1.0"

        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintWidth_percent="0.22"

        app:textStroke="true"
        app:textStrokeColor="@color/white"
        app:textStrokeWidth="16.0" />

    <com.tenriver.kpopmultiplechoice.OutlineTextView
        android:id="@+id/tips1_text5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="13sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/font_basic"

        android:gravity="center"
        android:text="@string/Tips1_5"
        android:textColor="@color/hard_color"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/tips1_image"
        app:layout_constraintTop_toBottomOf="@id/tips1_text3"

        app:layout_constraintVertical_bias="0.32"
        app:layout_constraintHorizontal_bias="0.529"

        app:layout_constraintWidth_percent="0.29"
        app:layout_constraintHeight_percent="0.12"

        app:textStroke="true"
        app:textStrokeColor="@color/white"
        app:textStrokeWidth="16.0" />

    <com.tenriver.kpopmultiplechoice.OutlineTextView
        android:id="@+id/tips1_text6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="13sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/font_basic"

        android:gravity="center"
        android:text="@string/Tips1_6"
        android:textColor="@color/hard_color"
        android:textStyle="bold"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tips1_text5"

        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.519"

        app:layout_constraintWidth_percent="0.29"
        app:layout_constraintHeight_percent="0.1"


        app:textStroke="true"
        app:textStrokeColor="@color/white"
        app:textStrokeWidth="16.0" />
</androidx.constraintlayout.widget.ConstraintLayout>